# neonc

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  README.md  grammar.ebnf  grammar.html
.github/workflows/: cmake.yml  ebnf2railroad.yml
cmake/: CLI11.cmake  benchmark.cmake  ctre.cmake  expected.cmake  flags.cmake  fmt.cmake  gtest.cmake  namedtype.cmake  nlohmann.cmake  options.cmake  tbb.cmake
cmd/: main.cpp
docs/: grammar.ebnf  index.html
include/ast/: Ast.hpp  Forward.hpp
include/ast/common/: AreaBase.hpp  ForElements.hpp  Identifier.hpp  Self.hpp
include/ast/expression/: Addition.hpp  BinaryOperation.hpp  BitwiseAnd.hpp  BitwiseOr.hpp  BlockExpr.hpp  Boolean.hpp  Division.hpp  Double.hpp  Equal.hpp  ForExpr.hpp  FunctionCall.hpp  GreaterEqThen.hpp  GreaterThen.hpp  IfExpr.hpp  Integer.hpp  LambdaExpr.hpp  LessEqThen.hpp  LessThen.hpp  LogicalAnd.hpp  LogicalNot.hpp  LogicalOr.hpp  MemberAccess.hpp  Multiplication.hpp  NotEqual.hpp  Remainder.hpp  SelfExpr.hpp  String.hpp  Substraction.hpp  TupleExpr.hpp  UnaryMinus.hpp  UnaryOperation.hpp  UnaryPlus.hpp
include/ast/import/: DirectImport.hpp  TypeclassImport.hpp
include/ast/statement/: ForStmt.hpp  IfStmt.hpp  LetAssignment.hpp  ReturnStmt.hpp  WhileStmt.hpp
include/ast/toplevel/: FunctionDefinition.hpp  Namespace.hpp
include/ast/type/: LambdaType.hpp  NamedType.hpp  OptionalType.hpp  SelfType.hpp  TupleType.hpp  UnionType.hpp
include/ast/utils/: Utils.hpp
include/common/: Error.hpp  Traits.hpp
include/lexer/: Lexer.hpp  Regexes.hpp  TextArea.hpp  Tokens.hpp
include/parser/: BlockExpressionParser.hpp  ExpressionAndStatementParser.hpp  ExpressionParser.hpp  ExpressionPrattParser.hpp  ForElementParser.hpp  IdentifierParser.hpp  IfExpressionParser.hpp  LParExpressionParser.hpp  LetStmtParser.hpp  NamedTypeParser.hpp  Parser.hpp  SelfTypeParser.hpp  SimpleExpressionParser.hpp  SimpleLambdaOrIdentifierParser.hpp  StatementParser.hpp  TypeParser.hpp  Utils.hpp
include/parser/types/: BasicTypeParser.hpp  NamedTypeParser.hpp  OneArgLambdaTypeParser.hpp  OptionalTypeParser.hpp  ParanthesisTypeParser.hpp  SelfTypeParser.hpp  TupleTypeParser.hpp  TypeParser.hpp  UnionTypeParser.hpp
src/ast/: position.rs
src/common/: text_position.rs
test/: CMakeLists.txt  main.cpp
test/lexer/: LexerTest.cpp
test/parser/: AdditionExprParserTest.cpp  BlockExprParserTest.cpp  BooleanExpressionParserTest.cpp  DivisionExprParserTest.cpp  DoubleExprParserTest.cpp  ExpressionParserTest.cpp  ForElementParserTest.cpp  FunctionCallExprParserTest.cpp  IdentifierExpressionParserTest.cpp  IdentifierParserTest.cpp  IfExpressionParserTest.cpp  IntegerExpressionParserTest.cpp  LambdaExprParserTest.cpp  LambdaTypeParsingTest.cpp  LetStatementParserTest.cpp  LogicalNotExprParserTest.cpp  MultiplicationExprParserTest.cpp  NamedTypeParsingTest.cpp  OptionalTypeParsingTest.cpp  ParserTest.cpp  RemainderExprParserTest.cpp  SelfExpressionParserTest.cpp  SelfTypeParsingTest.cpp  StringExpressionParserTest.cpp  SubstractionExprParserTest.cpp  TupleTypeParsingTest.cpp  TypeParserTest.cpp  TypeParsingTest.cpp  UnaryMinusExprParserTest.cpp  UnaryPlusExprParserTest.cpp  UnionTypeParsingTest.cpp
